--- a/s2t_intern.ipynb
+++ b/s2t_intern.ipynb
@@ -1064,7 +1064,7 @@
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "'up'"
+              "'yes'"
             ]
           },
           "metadata": {
